  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/18 tylerjereddy, richardjgowers, palnabarun, orbeckst, kain88-de, zemanj,
         VOD555, davidercruz, jbarnoud, ayushsuhane, hfmull

  * 0.18.1

Enhancements

  * Added augment functionality to create relevant images of particles 
    in the vicinity of central cell to handle periodic boundary
    conditions (PR #1977) 
  * Added lib.distances.capped_distance function to quickly calculate all distances
    up to a given maximum distance (PR #1941)
  * Added a rotation coordinate transformation (PR #1937)
  * Added a box centering trajectory transformation (PR #1946)
  * Added a on-the-fly trajectory transformations API and a coordinate translation
  	function (Issue #786)
  * Added various duecredit stubs
  * Import time reduced by a factor two (PR #1881)
  * added compound kwarg to center, centroid, center_of_geometry, center_of_mass (PR #1903)
  * Added rdf.InterRDF_s to calculate site-specific pair distribution
    functions (PR #1815)
  * Increased performance of (repeated) calls to AtomGroup.pack_into_box()
    (PR #1922)
  * Added boolean property *Group.isunique (PR #1922)
  * Added *Group.copy() methods returning an identical copy of the respective
    group (PR #1922)
  * Use a faster function to deduplicate indices (PR #1951)
  * Calculations in *Group.center() are performed in double precision (#PR1936)
  * Functions in lib.distances accept coordinate arrays of arbitrary dtype
    (PR #1936)
  * Added calc_distance, calc_angle and calc_dihedral to lib.distances
    (Issue #1262 #1938)
  * Added pbc kwarg to Bond/Angle/Dihedral/Improper object value method,
    default True. (Issue #1938)
  * ChainReader can correctly handle continuous trajectories split into multiple files,
    generated with gromacs -noappend (PR #1728)